Add more editor utility functions
Added editor's abilities to override character text, clear screen and scrollback, get character or line from scrollback, and filling entire line with a character cell